--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,26 +1,28 @@
 server:
-  port: 8081
+  port: 9090
 #  servlet-path: /rest/*
   tomcat:
     uri-encoding: UTF-8
 
 
 spring:
+#  datasource:
+#    url: jdbc:oracle:thin:@localhost:1521:hbys
+#    username: hbystetkik
+#    password: hbys123
   datasource:
-    url: jdbc:oracle:thin:@localhost:1521:hbys
-    username: hbystetkik
-    password: hbys123
+      url: jdbc:mysql://localhost:3306/hbys
+      username: hbystetkik
+      password: hbys123
   jpa:
     show-sql: true
     properties:
       hibernate:
         current_session_context_class: org.springframework.orm.hibernate4.SpringSessionContext
-        dialect: org.hibernate.dialect.Oracle10gDialect
+        dialect:  org.hibernate.dialect.MySQL5Dialect
     hibernate:
-      ddl-auto: update
+#      ddl-auto: update
       naming:
         strategy: org.hibernate.cfg.ImprovedNamingStrategy
-banner:
-  charset:
 
 
