--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,10 @@
             <artifactId>rewrite-servlet</artifactId>
             <version>2.0.12.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
         <!-- Other dependencies -->
         <dependency>
             <groupId>javax.servlet</groupId>
